WB-78: removed service interfaces and added records and lombok annotations