@@ -1,5 +1,6 @@
 package org.scouts105bentaya.converter;
 
+import org.scouts105bentaya.constant.GenericConstants;
 import org.scouts105bentaya.dto.UserDto;
 import org.scouts105bentaya.entity.Role;
 import org.scouts105bentaya.entity.User;
@@ -12,7 +13,6 @@ import java.util.stream.Collectors;
 @Component
 public class UserConverter extends GenericConverter<User, UserDto> {
 
-    private static final String fakePassword = "fake_password";
     private final RoleRepository roleRepository;
     private final ScoutUserConverter scoutUserConverter;
 
@@ -24,26 +24,26 @@ public class UserConverter extends GenericConverter<User, UserDto> {
     @Override
     public User convertFromDto(UserDto dto) {
         User user = new User();
-        user.setPassword(fakePassword.equals(dto.getPassword()) ? "" : dto.getPassword());
-        user.setUsername(dto.getUsername().toLowerCase());
-        user.setEnabled(dto.isEnabled());
-        user.setId(dto.getId());
-        user.setGroupId(Group.valueOf(dto.getGroupId()));
-        user.setRoles(dto.getRoles().stream().map(role -> roleRepository.findByName(role).orElse(null)).collect(Collectors.toList()));
-        user.setScoutList(dto.getScoutList() != null ? dto.getScoutList().stream().map(scoutUserConverter::convertFromDto).collect(Collectors.toSet()) : null);
+        user.setPassword(GenericConstants.FAKE_PASSWORD.equals(dto.password()) ? "" : dto.password());
+        user.setUsername(dto.username().toLowerCase());
+        user.setEnabled(dto.enabled());
+        user.setId(dto.id());
+        user.setGroupId(Group.valueOf(dto.groupId()));
+        user.setRoles(dto.roles().stream().map(role -> roleRepository.findByName(role).orElse(null)).toList());
+        user.setScoutList(dto.scoutList() != null ? dto.scoutList().stream().map(scoutUserConverter::convertFromDto).collect(Collectors.toSet()) : null);
         return user;
     }
 
     @Override
     public UserDto convertFromEntity(User user) {
-        UserDto userDto = new UserDto();
-        userDto.setId(user.getId());
-        userDto.setUsername(user.getUsername());
-        userDto.setPassword(fakePassword);
-        userDto.setRoles(user.getRoles().stream().map(Role::getName).collect(Collectors.toList()));
-        userDto.setEnabled(user.isEnabled());
-        userDto.setGroupId(Group.valueFrom(user.getGroupId()));
-        userDto.setScoutList(user.getScoutList() != null ? user.getScoutList().stream().map(scoutUserConverter::convertFromEntity).collect(Collectors.toList()) : null);
-        return userDto;
+        return new UserDto(
+            user.getId(),
+            user.getUsername(),
+            GenericConstants.FAKE_PASSWORD,
+            user.getRoles().stream().map(Role::getName).toList(),
+            user.isEnabled(),
+            Group.valueFrom(user.getGroupId()),
+            user.getScoutList() != null ? user.getScoutList().stream().map(scoutUserConverter::convertFromEntity).toList() : null
+        );
     }
 }
