@@ -2,25 +2,32 @@ package org.scouts105bentaya.service;
 
 import org.scouts105bentaya.entity.ContactMessage;
 import org.scouts105bentaya.repository.ContactMessageRepository;
+import org.scouts105bentaya.util.TemplateUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
+import org.thymeleaf.TemplateEngine;
 
 import java.util.List;
 
 @Service
 public class ContactMessageService {
 
+    private static final String TEMPLATE = "contact-message.html";
+
     @Value("${bentaya.email.it}")
     private String itEmail;
     private final EmailService emailService;
     private final ContactMessageRepository contactMessageRepository;
+    private final TemplateEngine templateEngine;
 
     public ContactMessageService(
         EmailService emailService,
-        ContactMessageRepository contactMessageRepository
+        ContactMessageRepository contactMessageRepository,
+        TemplateEngine templateEngine
     ) {
         this.emailService = emailService;
         this.contactMessageRepository = contactMessageRepository;
+        this.templateEngine = templateEngine;
     }
 
     public List<ContactMessage> findAll() {
@@ -31,24 +38,12 @@ public class ContactMessageService {
         return contactMessageRepository.save(contactMessage);
     }
 
-    //todo replace with template
     public void sendContactMessageEmail(ContactMessage contactMessage) {
         this.save(contactMessage);
         emailService.sendSimpleEmailWithHtml(
             itEmail,
-            "MENSAJE WEB: " + contactMessage.getSubject(),
-            String.format("<div>" +
-                          "    <p>Nos ha llegado un nuevo mensaje por medio del formulario de contacto de la web, con motivo \"<b>%s</b>\" y el mensaje recibido es:" +
-                          "    </p>" +
-                          "    <hr>" +
-                          "    <div  style=\"white-space: pre-wrap\">%s</div>" +
-                          "    <hr>" +
-                          "    <p>Los datos de la persona de contacto son:</p>" +
-                          "    <p><b>Nombre:</b> %s</p>" +
-                          "    <p><b>Correo:</b> %s</p>" +
-                          "    <p mt-4>Atentamente,</p>" +
-                          "    <p>El sistema de mensajería de Scouts 105 Bentaya</p>" +
-                          "</div>", contactMessage.getSubject(), contactMessage.getMessage(), contactMessage.getName(), contactMessage.getEmail())
+            "MENSAJE WEB: %s".formatted(contactMessage.getSubject()),
+            this.templateEngine.process(TEMPLATE, TemplateUtils.getContext("form", contactMessage))
         );
     }
 }
